--- a/views/Components/header.ejs
+++ b/views/Components/header.ejs
@@ -12,7 +12,7 @@
         <a href="/">
             <li class="<%= current==='info'? 'active': '' %> ">info</li>
         </a>
-        <a href="/add">
+        <a href="/user/add">
             <li class="<%= current==='add'? 'active': '' %> ">add</li>
         </a>
         <div class="btn" id="toggle" onclick="">dark</div>
