--- a/public/main.css
+++ b/public/main.css
@@ -142,16 +142,20 @@ header .logo h2 {
     font-size: 24px;
 }
 @media(max-width: 800px) {
+    header {
+        padding: 10px 40px;
+    }
     header .logo {
         width: 100%;
         text-align: center;
         margin-bottom: 10px;
     }
 }
-@media(max-width: 515px) {
+@media(max-width: 560px) {
     header {
         justify-content: center;
         gap: 14px;
+        padding: 10px 25px;
     }
 }
 header ul.nav {
@@ -194,10 +198,30 @@ header form.search button {
 
 
 main {
-    min-height: 87vh;
+    min-height: calc(100vh - 54px);
     padding: 0 60px;
     background-color: var(--mainClr-trans);
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+}
+@media(max-width: 800px) {
+    main {
+        min-height: calc(100vh - 91px);
+    }
+}
+@media(max-width: 560px) {
+    main {
+        min-height: calc(100vh - 105px);
+    }
+}
+@media(max-width: 510px) {
+    main {
+        min-height: calc(100vh - 151px);
+    }
 }
 main table {
     position: absolute;
@@ -206,15 +230,31 @@ main table {
     left: 50%;
     transform: translateX(-50%);
     border: 3px solid #eee;
+    border-radius: 20px;
 }
 main table tr {
-background-color: #eee;
+    /* background-color: #eee; */
+    border-radius: 20px;
 }
 main table tr th {
     padding: 5px;
+    background-color: #eee;
+}
+main table tr th:first-child {
+    border-radius: 20px 0 0 0;
+}
+main table tr th:last-child {
+    border-radius: 0 20px 0 0;
 }
 main table tr td {
     padding: 5px;
+    background-color: #eee;
+}
+main table tr:last-child td:first-child {
+    border-radius: 0 0 0 20px;
+}
+main table tr:last-child td:last-child {
+    border-radius: 0 0 20px 0;
 }
 td.btnsBox {
 
@@ -230,19 +270,20 @@ main table tr td a  {}
 main table tr td a .btnX {}
 
 
-main form {
+main form.add-form {
     background-color: var(--mainClr-trans);
-    padding: 25px 10px 5px 10px;
+    padding: 20px;
+    border-radius: 15px;
 }
-main form .lin {
+main form.add-form .lin {
     margin-bottom: 10px;
 }
-main form .lin label {
+main form.add-form .lin label {
     color: #fff;
     display: inline-block;
     width: 100px;
 }
-main form .lin input {
+main form.add-form .lin input {
     width: 200px;
     padding: 3px 0;
     border-radius: 5px;
@@ -250,7 +291,7 @@ main form .lin input {
     font-size: 14px;
     font-weight: bold;
 }
-main form .lin  select {
+main form.add-form .lin  select {
     width: 200px;
     padding: 3px 0;
     border-radius: 5px;
@@ -258,12 +299,56 @@ main form .lin  select {
     font-size: 14px;
     font-weight: bold;
 }
-main form .lin  select option {
+main form.add-form .lin  select option {
     background-color: var(--mainClr);
     color: #fff;
 }
 
+@media(max-width:820px) {
+    .country-td,
+    .gender-td,
+    .date-td {
+        display: none;
+    }
+}
+@media(max-width:444px) {
+    .phone-td {
+        display: none;
+    }
+}
 
+.success-body {
+    height: 100vh;
+    background-color: var(--mainClr-trans);
+}
+.success {
+    padding: 25px;
+    border-radius: 25px;
+    border: 3px solid var(--mainClr);
+}
+@media(max-width: 550px){
+    .success {
+        width: 75vw; 
+    }
+}
+.success .mess {
+    background-color: white;
+    color: var(--mainClr-dark);
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 32px;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    border: 3px solid var(--mainClr-dark);
+    
+}
+.success .mess .btns {}
+.success .mess .btns .btn {}
+
+
+.no-data {
+    
+}
 
 
 main .view {
@@ -293,4 +378,20 @@ main .view .lin .value {
     width: 250px;
     color: #aaa;
     text-transform: capitalize;
+}
+@media(max-width: 450px) {
+    main .view .lin .key {
+        width: 92px;
+        font-size: 14px; 
+    }
+    main .view .lin .value {
+        width: 185px;
+        font-size: 14px;
+    }
+}
+@media(max-width: 330px) {
+    main .view .lin {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
