--- a/views/Components/header.ejs
+++ b/views/Components/header.ejs
@@ -4,8 +4,8 @@
             <h2>cutsomer info</h2>
         </a>
     </div>
-    <form class="search">
-        <input type="search" name="" id="">
+    <form action="/search" method="post" class="search">
+        <input type="search" name="searchText" id="">
         <button class="btn">search</button>
     </form>
     <ul class="nav">
