--- a/public/main.css
+++ b/public/main.css
@@ -224,11 +224,11 @@ main {
     }
 }
 main table {
-    position: absolute;
+    /* position: absolute; */
     padding: 5px;
     width: 90vw;
-    left: 50%;
-    transform: translateX(-50%);
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
     border: 3px solid #eee;
     border-radius: 20px;
 }
@@ -347,8 +347,18 @@ main form.add-form .lin  select option {
 
 
 .no-data {
-    
+    border: 2px solid;
+    padding: 10px;
+    border-radius: 10px;
+    text-transform: capitalize;
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    color:#fff
 }
+.no-data h1 {}
+.no-data a {}
+.no-data a div {}
 
 
 main .view {
