--- a/views/user/add.ejs
+++ b/views/user/add.ejs
@@ -38,6 +38,7 @@
             <div class="lin">
                 <label for="">country</label>
                 <select id="country" name="country" class="form-control">
+                    <option selected hidden disabled>Choose  . . .</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Åland Islands">Åland Islands</option>
                     <option value="Albania">Albania</option>
@@ -287,6 +288,7 @@
             <div class="lin">
                 <label for="gender">gender</label>
                 <select name="gender" id="gender">
+                    <option selected hidden disabled>Choose  . . .</option>
                     <option value="male">male</option>
                     <option value="female">female</option>
                 </select>
