add Routing to the project

--- a/views/success.ejs
+++ b/views/success.ejs
@@ -14,7 +14,7 @@
         <div class="mess"> data successfuly processed </div>
         <div class="btns flx-between">
             <a href="/"><div class="btn light-btn">home</div></a>
-            <a href="/add"><div class="btn light-btn">add another customer</div></a>
+            <a href="/user/add"><div class="btn light-btn">add another customer</div></a>
         </div>
     </div>
 </body>
